Auto-generated JUnit tests | 2025-11-15 13:28:54